[gd_scene load_steps=4 format=3 uid="uid://da31rdk83ydat"]

[ext_resource type="Texture2D" uid="uid://dmlq3uxw5132g" path="res://icon.svg" id="1_0n4x3"]
[ext_resource type="Script" path="res://Scripts/Player.gd" id="1_24la8"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_cqt3j"]
radius = 15.0
height = 78.0

[node name="CharacterBody2D" type="CharacterBody2D"]
script = ExtResource("1_24la8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_cqt3j")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.242188, 0.609375)
texture = ExtResource("1_0n4x3")

[node name="PlayerCamera" type="Camera2D" parent="."]
position_smoothing_enabled = true

[node name="WallJumpInputSupresstionTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 0.1
one_shot = true

[node name="CoyoteTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 0.15
one_shot = true

[node name="WallCoyoteTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 0.1
one_shot = true

[node name="JumpBufferTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 0.1
one_shot = true
